feat: paginação de usuarios; melhorias nas classes de secutiry
